--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <h4>
                     Pleas dont enter any negative value or value less than 5
                 </h4>
-                <input type="number" autofocus value="10" />
+                <input type="number" autofocus value="10" min="5" />
                 <button id="btn" class="btn-content">Submit</button>
             </div>
         </div>
